--- a/lib/appium_instrumenter/resources/AndroidManifest.xml
+++ b/lib/appium_instrumenter/resources/AndroidManifest.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
         xmlns:android="http://schemas.android.com/apk/res/android"
-        package="io.appium.uiautomator2.server.test"
-        >
+        android:compileSdkVersion="28"
+        android:compileSdkVersionCodename="9"
+        package="io.appium.uiautomator2.server.test">
 
   <uses-sdk
-          android:minSdkVersion="19"
-          android:targetSdkVersion="25" />
+          android:minSdkVersion="21"
+          android:targetSdkVersion="28" />
 
   <instrumentation
           android:label="Tests for io.appium.uiautomator2.server"
-          android:name="android.support.test.runner.AndroidJUnitRunner"
+          android:name="androidx.test.runner.AndroidJUnitRunner"
           android:targetPackage="#targetPackage#"
           android:handleProfiling="false"
           android:functionalTest="false" />
